<resources>
    <string name="app_name">善菜网</string>

    <!--验证码相关-->
    <string name="sms_resend">重新发送</string>
    <string name="sms_sedsend">S</string>
    <string name="sms_sended">验证码已经在路上了</string>
    <string name="sms_getcode">获取验证码</string>
    <string name="sms_send">获取验证码</string>
    <string name="title_activity_as_the_owner">AsTheOwnerActivity</string>

    <!--底部导航栏-->
    <string name="radio_home">首页</string>
    <string name="radio_classify">分类</string>
    <string name="radio_activity">活动中心</string>
    <string name="radio_shop_car">购物车</string>
    <string name="radio_my">我的</string>
    <string name="home_index_top_search">请输入店铺名、菜品或地点</string>
    <string name="home_index_new_product_launch">新品上市</string>
    <string name="home_index_carnival_city">王牌狂欢城</string>
    <string name="home_index_ranking_list">排行榜</string>
    <string name="home_index_cai_information">善菜资讯</string>
    <string name="home_index_shenyang">沈阳</string>
    <string name="home_index_daily_recommend">今日推荐</string>
    <string name="login_register">还没加入善菜网？立即注册</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_btn_log_text">登录</string>
    <string name="login_tv_password">密码</string>
    <string name="login_tv_user">账号</string>
    <string name="login_et_pw_information">您的登录密码</string>
    <string name="login_et_user_information">您的账号</string>
    <string name="shop_car_null">购物车是空的</string>
    <string name="shop_car_title">购物车</string>
    <string name="register_phone">注册手机号</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="verification_code">验证码</string>
    <string name="receive_verification_code">收到的验证码</string>
    <string name="save">保存</string>
    <string name="user_name">用户名</string>
    <string name="next">下一步</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_modification_password">修改登录密码</string>
    <string name="old_password">原密码</string>
    <string name="your_old_password">您的原密码</string>
    <string name="new_password">新密码</string>
    <string name="your_new_password">您的新密码</string>
    <string name="reset">重置</string>
    <string name="reset_password">重置密码</string>
    <string name="affirm_password">确认密码</string>
    <string name="pay_affirm">确认</string>
    <string name="common_inventory">常用清单</string>
    <string name="my_wallet">我的钱包</string>
    <string name="set_up">设置</string>
    <string name="service_center">客服中心</string>
    <string name="stay_pay">待付款</string>
    <string name="stay_shipments">待发货</string>
    <string name="stay_take_goods">待收货</string>
    <string name="my_indent">我的订单</string>
    <string name="null_common_inventory">无常用清单</string>
    <string name="manage_site">管理收货地址</string>
    <string name="clear_cache">清除缓存</string>
    <string name="phone_number">手机号</string>
    <string name="forget_login_password">忘记登录密码</string>
    <string name="your_phone">您的手机号</string>
    <string name="pay_password">支付密码</string>
    <string name="shan_cai_register">善菜网注册</string>
    <string name="personage_info">个人信息</string>
    <string name="base_information">基本信息</string>
    <string name="change_head_portrait">修改头像</string>
    <string name="real_name_information">实名信息</string>
    <string name="real_name">真实姓名</string>
    <string name="name">姓名</string>
    <string name="id_code">身份证号码</string>
    <string name="else_information">其他信息</string>
    <string name="register_time">注册时间</string>
    <string name="common_questions">常见问题</string>
    <string name="online_service_">在线客服</string>
    <string name="phone_service">电话客服</string>
    <string name="present">提交</string>
    <string name="uploading_photos">上传图片</string>
    <string name="delete">删除</string>
    <string name="couple_back">您有什么问题想要反馈给我们？</string>
    <string name="et_couple_back_content">1.您在使用平台过程中出现的功能问题
        2.您希望平台提供的服务
        3.其他</string>
    <string name="login_password">登录密码</string>
    <string name="second_again_get">秒后重新获取</string>
    <string name="again_get">重新获取</string>
    <string name="top_up">充值</string>
    <string name="money_query">差款查询</string>
    <string name="password">密码</string>
    <string name="set_your_login_pw">设置您的登录密码</string>
    <string name="repetition_your_log_pw">重复您的登录密码</string>
    <string name="register">注册</string>
    <string name="find_goods">发现好货</string>
    <string name="find_fresh_goods">发现新鲜好货</string>
    <string name="delicious_stop">好吃不停</string>
    <string name="days_special_offer">天天特价 好吃不停</string>
    <string name="classify">分类</string>
    <string name="consignee">收货人</string>
    <string name="location">所在地区</string>
    <string name="detail_location">详细地址</string>
    <string name="set_default_location">设置为默认地址</string>
    <string name="everyone_use">每次下单会使用默认地址</string>
    <string name="your_pay_password">您的支付密码</string>
    <string name="affirm_your_pay_password">确认您的支付密码</string>
    <string name="wei_xin">微信</string>
    <string name="alipay">支付宝</string>
    <string name="balance">余额</string>
    <string name="ok">成功!</string>
    <string name="back_wallet">返回我的钱包</string>
    <string name="not_yet_location">还没有地址呢</string>
    <string name="add_new_location">添加新的收货地址</string>
    <string name="cancel">取消</string>
    <string name="all">总计：</string>
    <string name="commit">提交订单</string>
    <string name="affirm_indent">订单确认</string>
    <string name="my_indent_all">全部</string>
    <string name="my_indent_stay_pay">待付款</string>
    <string name="my_indent_take_goods">待收货</string>
    <string name="my_indent_send_goods">待发货</string>
    <string name="settle_accounts">结算</string>
    <string name="title_activity_start">StartActivity</string>

</resources>
