<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_activity"
    android:orientation="vertical">
    <!--返回按钮X-->

    <include layout="@layout/base_head_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@color/bg_activity" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_all_height"
        android:layout_gravity="center_horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/layout_distance_two">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_only_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_tv_user"
                android:textColor="@color/font_base_color" />

            <EditText
                android:id="@+id/etYourAccount"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_only_height"
                android:background="@null"
                android:hint="@string/login_et_user_information"
                android:inputType="number"
                android:paddingLeft="22dp"
                android:textColor="@color/activity_font_color"
                android:textColorHint="@color/font_base_color_"
                android:textSize="@dimen/text_size_et" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_only_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_tv_password"
                android:textColor="@color/font_base_color" />

            <EditText
                android:id="@+id/etLoginPassWord"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_only_height"
                android:background="@null"
                android:hint="@string/login_et_pw_information"
                android:inputType="textPassword"
                android:paddingLeft="22dp"
                android:textColor="@color/activity_font_color"
                android:textColorHint="@color/font_base_color_"
                android:textSize="@dimen/text_size_et" />


        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_only_height"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="@dimen/layout_distance"
        android:layout_marginRight="@dimen/layout_distance"
        android:layout_marginTop="@dimen/layout_distance_four"
        android:background="@drawable/login_btn_bg"
        android:text="@string/login_btn_log_text"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:padding="5dp"
            android:text="@string/login_register"
            android:textColor="@color/font_base_color"
            android:textSize="@dimen/text_size_et" />

        <TextView
            android:id="@+id/tvForgetPw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:padding="5dp"
            android:text="@string/login_forget_password"
            android:textColor="@color/font_base_color"
            android:textSize="@dimen/text_size_et" />
    </RelativeLayout>

</LinearLayout>