<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_activity"
    android:orientation="vertical">

    <include layout="@layout/base_head_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@color/bg_activity" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_all_height"
        android:layout_gravity="center_horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/layout_distance_two">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_only_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_password"
                android:textColor="@color/font_base_color" />

            <EditText
                android:id="@+id/etFormerPW"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_only_height"
                android:textColor="@color/activity_font_color"
                android:background="@null"
                android:hint="@string/your_old_password"
                android:paddingLeft="22dp"
                android:textColorHint="@color/font_base_color_"
                android:textSize="@dimen/text_size_et" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_only_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textColor="@color/font_base_color" />

            <EditText
                android:id="@+id/etNewPW"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_only_height"
                android:background="@null"
                android:textColor="@color/activity_font_color"
                android:hint="@string/your_new_password"
                android:paddingLeft="22dp"
                android:textColorHint="@color/font_base_color_"
                android:textSize="@dimen/text_size_et" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_only_height"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="@dimen/layout_distance"
        android:layout_marginRight="@dimen/layout_distance"
        android:layout_marginTop="@dimen/layout_distance_four"
        android:background="@drawable/login_btn_bg"
        android:text="@string/reset"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvForgetPW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/layout_only_height"
            android:drawablePadding="7dp"
            android:drawableRight="@drawable/back_versa_icon"
            android:padding="5dp"
            android:text="@string/forget_password"
            android:textColor="@color/forget_pw" />

    </LinearLayout>
</LinearLayout>