<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_activity"
    android:orientation="vertical">
    <!--返回按钮X-->

    <include layout="@layout/base_head_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@color/bg_activity" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_all_height"
        android:layout_gravity="center_horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/layout_distance_two">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_only_height"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/font_base_color" />

            <EditText
                android:id="@+id/etTel"
                android:layout_width="0dp"
                android:layout_height="@dimen/layout_only_height"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="number"
                android:hint="@string/your_phone"
                android:paddingLeft="22dp"
                android:textColor="@color/activity_font_color"
                android:textColorHint="@color/font_base_color_"
                android:textSize="@dimen/text_size_et" />

            <TextView
                android:id="@+id/tvGetCode"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:background="@color/sms_bg_color_"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/get_verification_code"
                android:textColor="@color/sms_text_color_"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_only_height"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verification_code"
                android:textColor="@color/font_base_color" />

            <EditText
                android:id="@+id/etCode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_only_height"
                android:background="@null"
                android:inputType="number"
                android:hint="@string/receive_verification_code"
                android:paddingLeft="22dp"
                android:textColor="@color/activity_font_color"
                android:textColorHint="@color/font_base_color_"
                android:textSize="@dimen/text_size_et" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:background="@color/line_color" />

</LinearLayout>