<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_activity"
    android:orientation="vertical">

    <include layout="@layout/base_head_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_only_height"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/layout_distance_one">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/font_base_color" />

        <EditText
            android:id="@+id/etSetYouPW"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_only_height"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="@string/set_your_login_pw"
            android:paddingLeft="52dp"
            android:textColor="@color/activity_font_color"
            android:textColorHint="@color/font_base_color_"
            android:textSize="@dimen/text_size_et" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_only_height"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/layout_distance_one">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/affirm_password"
            android:textColor="@color/font_base_color" />

        <EditText
            android:id="@+id/etRepetitionYouPW"
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_only_height"
            android:inputType="textPassword"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/repetition_your_log_pw"
            android:paddingLeft="24dp"
            android:textColor="@color/activity_font_color"
            android:textColorHint="@color/font_base_color_"
            android:textSize="@dimen/text_size_et" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_only_height"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="@dimen/layout_distance"
        android:layout_marginRight="@dimen/layout_distance"
        android:layout_marginTop="@dimen/layout_distance_four"
        android:background="@drawable/login_btn_bg"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAgreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/layout_distance_one"
            android:text="《善菜网用户注册协议》"
            android:textColor="@color/check_font_color" />

        <CheckBox
            android:paddingLeft="4dp"
            android:id="@+id/tvAgreementRead"
            android:layout_width="wrap_content"
            android:checked="true"
            android:layout_height="wrap_content"
            android:button="@drawable/check_state"
            android:text="已读"
            android:textColor="@color/font_base_color_" />
    </LinearLayout>
</LinearLayout>